--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2.2'
 
 services:
-  dockercrewcost:
+  dockerandroidrun:
     build:
       context: .
     tty: true
@@ -9,7 +9,7 @@ services:
     ports:
       - '5037:5037'
     volumes:
-      - ./:/new-project/:delegated
+      - ./:/dockerAndroidRun/:delegated
       - notused:/./node_modules
     healthcheck:
       disable: true
